--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -11,11 +11,8 @@ RUN  yum -y install  http://dev.mysql.com/get/mysql57-community-release-el7-11.n
 RUN echo "20190709"    
 RUN curl -fsSL "https://raw.githubusercontent.com/qq275860560/mysql/master/src/main/centos/tmp/init.sh" | sh &&\
     cd /etc/ && curl -fsSL -O "https://raw.githubusercontent.com/qq275860560/dataxweb/master/src/main/centos/etc/my.cnf" &&\
-    cd /usr/share/mysql/ && curl -fsSL -O "https://raw.githubusercontent.com/qq275860560/dataxweb/master/src/main/centos/usr/share/mysql/dataxweb.sql" &&\
     chmod -R 777 /var/lib/mysql /usr/share/mysql /var/run/mysqld &&\
-    chown -R root:root /var/lib/mysql /usr/share/mysql /var/run/mysqld &&\
-    /usr/sbin/mysqld  --defaults-file=/etc/my.cnf --user=root --daemonize &&\
-    mysql -uroot  -p123456  mysql< ./dataxweb.sql  2>/dev/null 
+    chown -R root:root /var/lib/mysql /usr/share/mysql /var/run/mysqld
 
 # install jenkins
 RUN wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo && \
@@ -38,9 +35,9 @@ RUN curl -fSL http://datax-opensource.oss-cn-hangzhou.aliyuncs.com/datax.tar.gz 
 RUN wget http://repos.fedorapeople.org/repos/dchen/apache-maven/epel-apache-maven.repo -O /etc/yum.repos.d/epel-apache-maven.repo &&\
     yum -y install apache-maven
     
-# app test
+# app dependency
 RUN cd /tmp &&  git clone https://github.com/qq275860560/dataxweb.git &&\
-    source /etc/profile && cd /tmp/dataxweb && (mvn compile || true) 
+    source /etc/profile && cd /tmp/dataxweb && (mvn compile || true) && (mvn spring-boot:run || true) 
 
 
  
